changed logo and all martfury references

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
 /*
-    Project: Martfury - React Admin Template
+    Project: RED SYS - React Admin Template
     Version: 1.0.0
     Date Created: 2020-08-19T15:29:29+07:00
     Date Updated: 2020-12-02T12:22:15+07:00
